--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ crossterm = "0.27.0"
 dotenv = "0.15"
 uuid = { version = "1.8.0", features = ["v4"] }
 sqlparser = "0.37.0"
+env_logger = "0.11"
 
 # Enable offline mode for development
 [package.metadata.sqlx]
@@ -34,3 +35,5 @@ offline = true
 [dev-dependencies]
 tempfile = "3.2"
 assert_matches = "1.5"
+rstest = "0.18.1"
+insta = "1.34.0"
