--- a/tests/test.env
+++ b/tests/test.env
@@ -1,2 +1,2 @@
-# Test database configuration for Docker Compose
+# Test database configuration
 TEST_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/sqltrace_test
