--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "sqltrace-rs"
 version = "0.1.0"
 edition = "2021"
 authors = ["Lokesh Kumar <lkumar94@gmail.com>"]
-description = "A Terminal-Based SQL Visualizer & Advisor"
+description = "A Web-Based SQL Query Visualizer & Advisor"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/kumarlokesh/sqltrace-rs"
 
@@ -14,7 +14,9 @@ test-threads = 1
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "migrate"], default-features = false }
-ratatui = { version = "0.25.0", features = ["crossterm"] }
+axum = { version = "0.7", features = ["macros"] }
+tower = "0.4"
+tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = "1.0"
@@ -22,11 +24,9 @@ thiserror = "1.0"
 clap = { version = "4.0", features = ["derive"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-crossterm = "0.27.0"
 dotenv = "0.15"
 uuid = { version = "1.8.0", features = ["v4"] }
 sqlparser = "0.37.0"
-env_logger = "0.11"
 
 # Enable offline mode for development
 [package.metadata.sqlx]
@@ -37,3 +37,5 @@ tempfile = "3.2"
 assert_matches = "1.5"
 rstest = "0.18.1"
 insta = "1.34.0"
+axum-test = "14.0"
+tokio-test = "0.4"
